--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUkty8oVjLubA6nki60qeY",
+      "authorship_tag": "ABX9TyPCZCQWRpHztfgE6kSFzCbG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,23 +76,10 @@
         "from plots.chapter4 import *"
       ],
       "metadata": {
-        "id": "bRn0N4y8yesU",
-        "outputId": "0cf57fe3-ccf5-4954-9d5d-0563669b04e5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "bRn0N4y8yesU"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading files from GitHub repo to Colab...\n",
-            "Finished!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -135,7 +122,7 @@
           "height": 17
         },
         "id": "DmgDM3-KyoUv",
-        "outputId": "f0d6673a-f332-4ec3-965e-32edb1781742"
+        "outputId": "ddaf055f-561f-4f1a-ce0d-fb98633eab81"
       },
       "execution_count": 3,
       "outputs": [
@@ -208,7 +195,7 @@
           "height": 541
         },
         "id": "oWEazRLX1lul",
-        "outputId": "8c973f76-307a-4ed7-92c4-76e75ea8d250"
+        "outputId": "a69de6a6-6dad-451d-92d5-ec647b24563d"
       },
       "execution_count": 5,
       "outputs": [
@@ -286,10 +273,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 287
+          "height": 329
         },
         "id": "12KECyhm4B4B",
-        "outputId": "8b081548-4e58-4a6e-be9f-e511d567953d"
+        "outputId": "72032252-2fc3-4240-c015-e2b3126cef8f"
       },
       "execution_count": 8,
       "outputs": [
@@ -326,10 +313,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 328
         },
         "id": "cj9CKqCW6kI3",
-        "outputId": "2b444882-fe3e-4c9a-d3eb-109ee2859c8f"
+        "outputId": "927c2d49-b2cf-44de-b398-a6d4c1b7d37b"
       },
       "execution_count": 10,
       "outputs": [
@@ -374,7 +361,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JMY0-9YY7Rpk",
-        "outputId": "3adc9ec4-5b63-4801-e51d-0c66b8cbe5e0"
+        "outputId": "b6c3a661-b271-4d26-e851-a50ae3c5e8a8"
       },
       "execution_count": 11,
       "outputs": [
@@ -402,7 +389,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kX1EFQBU7YmD",
-        "outputId": "f02bd1dd-5e57-4976-b22e-c2abe043f6e9"
+        "outputId": "db20b3a7-04b5-4955-9f09-fceaaa3ed652"
       },
       "execution_count": 12,
       "outputs": [
@@ -445,7 +432,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gqriNhWy8Aoz",
-        "outputId": "ae5f3c78-e205-4734-c37f-c4940c58841f"
+        "outputId": "65383a8d-e3c5-4c87-d07e-5d77d1a954c9"
       },
       "execution_count": 13,
       "outputs": [
@@ -471,7 +458,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vUTp6OyR8Mxw",
-        "outputId": "e2e01f7e-6d8f-412c-ac54-838c189f2cae"
+        "outputId": "698cedb2-ffae-4496-dbd4-5138ef904914"
       },
       "execution_count": 14,
       "outputs": [
@@ -566,7 +553,7 @@
       ],
       "metadata": {
         "id": "fuhfN92n8QEK",
-        "outputId": "0edf4535-028d-4f40-f95e-659590b3e67b",
+        "outputId": "67af9726-7e1d-4ff5-f088-d52661c638ed",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -592,7 +579,7 @@
       ],
       "metadata": {
         "id": "LFTvZwXOCilw",
-        "outputId": "56cb75c2-c4cc-44b6-a9aa-a0308cc5908b",
+        "outputId": "f50abacf-b848-426e-9225-ad17240c3eb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -627,10 +614,10 @@
       ],
       "metadata": {
         "id": "x2kT4tjmCm6k",
-        "outputId": "c5818399-e603-44be-e906-0fa8d56dac23",
+        "outputId": "83a7f166-a335-4dd8-d6b2-bf43c44d8d6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 299
         }
       },
       "execution_count": 17,
@@ -689,7 +676,7 @@
       ],
       "metadata": {
         "id": "iCIdFL-YLcHh",
-        "outputId": "4505d121-655d-49d8-b1a9-a06fe77a6788",
+        "outputId": "5798c333-f560-4cac-a6a7-d559ddc3f1d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -741,7 +728,7 @@
       ],
       "metadata": {
         "id": "V6V-hZzUJR0S",
-        "outputId": "f38a3239-658c-4ff7-a12d-b01be77a8b8b",
+        "outputId": "4b53cdd3-d6b2-42a9-985b-aec8534af494",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -801,7 +788,7 @@
       ],
       "metadata": {
         "id": "z7bk2ZrOM6-Y",
-        "outputId": "9f52894d-fd0d-473e-a146-32423f3e50ca",
+        "outputId": "36d3b40b-bbf8-40fb-bcc8-f2dee66618ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -864,7 +851,7 @@
       ],
       "metadata": {
         "id": "egvC-crYOF4k",
-        "outputId": "baee7bd5-1ff2-46d4-8794-d1208ffe377f",
+        "outputId": "9023ae3b-2e8d-41bf-f834-1df782e88ab1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -892,7 +879,7 @@
       ],
       "metadata": {
         "id": "HGyk1qXSPcoM",
-        "outputId": "4c9d4765-2d8f-4871-95c7-86fab91f1a2c",
+        "outputId": "d82d607d-e7f6-4dbc-ae10-7b6e0d87a41d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -937,7 +924,7 @@
       ],
       "metadata": {
         "id": "CN72TS-cP1fr",
-        "outputId": "d57a8d2e-6f54-4cdb-cb38-779cca73e791",
+        "outputId": "7b23366f-6905-46c1-a658-8059c92a21c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1062,6 +1049,216 @@
       },
       "execution_count": 26,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Data sampler"
+      ],
+      "metadata": {
+        "id": "AYi6SZoAwPYI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The SubsetRandomSampler samples indices from a list, given as argument, without\n",
+        "replacement. As in the other samplers, these indices are used to load data from a\n",
+        "dataset. \n",
+        "\n",
+        "If an index is not on the list, the corresponding data point will never be\n",
+        "used.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "rW4hpRV1wRH_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def index_splitter(n, splits, seed=13):\n",
+        "  idx = torch.arange(n)\n",
+        "  # Makes the split argument a tensor\n",
+        "  splits_tensor = torch.as_tensor(splits)\n",
+        "  # Finds the correct multiplier, so we don't have to worry about summing up to N (or one)\n",
+        "  multiplier = n / splits_tensor.sum()\n",
+        "  splits_tensor = (multiplier * splits_tensor).long()\n",
+        "  # If there is a difference, throws at the first split so random_split does not complain\n",
+        "  diff = n - splits_tensor.sum()\n",
+        "  splits_tensor[0] += diff\n",
+        "  # Uses PyTorch random_split to split the indices\n",
+        "  torch.manual_seed(seed)\n",
+        "  return random_split(idx, splits_tensor)"
+      ],
+      "metadata": {
+        "id": "ItmGiZTtwiR1"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_idx, val_idx = index_splitter(len(x_tensor), [80, 20])\n",
+        "train_idx"
+      ],
+      "metadata": {
+        "id": "wukiAlA0xpvu",
+        "outputId": "43e8d2f8-973d-4647-f3d2-2cbb160ea78a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<torch.utils.data.dataset.Subset at 0x7fed4b5e22e0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_idx.indices[:5]"
+      ],
+      "metadata": {
+        "id": "NYLzlM25x2HX",
+        "outputId": "9a82444f-29ed-4e00-c3b1-7486436d2383",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[118, 170, 148, 239, 226]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, each Subset object is used as an argument to the corresponding sampler."
+      ],
+      "metadata": {
+        "id": "RDJ_VPQpyHQg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_sampler = SubsetRandomSampler(train_idx)\n",
+        "val_sampler = SubsetRandomSampler(val_idx)"
+      ],
+      "metadata": {
+        "id": "s227WY0KyH4N"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "So, we can use a single dataset from which to load the data since the split is\n",
+        "controlled by the samplers. \n",
+        "\n",
+        "But we still need two data loaders, each using its\n",
+        "corresponding sampler."
+      ],
+      "metadata": {
+        "id": "q7nHj8D_ygSc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Builds a loader of each set\n",
+        "train_loader = DataLoader(dataset=dataset, batch_size=16, sampler=train_sampler)\n",
+        "val_loader = DataLoader(dataset=dataset, batch_size=16, sampler=val_sampler)"
+      ],
+      "metadata": {
+        "id": "N1UjTq4qyiOf"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">If you’re using a sampler, you cannot set `shuffle=True`.\n",
+        "\n",
+        "We can also check if the loaders are returning the correct number of mini-batches."
+      ],
+      "metadata": {
+        "id": "R7MeJL8Ay9jY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(iter(train_loader)), len(iter(val_loader))"
+      ],
+      "metadata": {
+        "id": "Nw1igOyhzCfd",
+        "outputId": "7e5267df-1969-4ba6-abfe-e95be9faf26b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(15, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "OK, cool, this means we don’t need two (split) datasets anymore—we only need\n",
+        "two samplers."
+      ],
+      "metadata": {
+        "id": "tum62hDXzRVZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Data Augmentation"
+      ],
+      "metadata": {
+        "id": "SrHC28BLzMSq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "-mmQtulKzM-F"
+      }
     }
   ]
 }
