--- a/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/Part-II-Computer-Vision/01_classifying_images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPCZCQWRpHztfgE6kSFzCbG",
+      "authorship_tag": "ABX9TyMxaSXRoDErcOn27alCC04/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,10 +76,23 @@
         "from plots.chapter4 import *"
       ],
       "metadata": {
-        "id": "bRn0N4y8yesU"
+        "id": "bRn0N4y8yesU",
+        "outputId": "88e0a4e7-ea97-4b1b-c532-1adb804d490f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading files from GitHub repo to Colab...\n",
+            "Finished!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -122,7 +135,7 @@
           "height": 17
         },
         "id": "DmgDM3-KyoUv",
-        "outputId": "ddaf055f-561f-4f1a-ce0d-fb98633eab81"
+        "outputId": "8d8d4d0e-9ac8-4215-f746-e460d43aa788"
       },
       "execution_count": 3,
       "outputs": [
@@ -195,7 +208,7 @@
           "height": 541
         },
         "id": "oWEazRLX1lul",
-        "outputId": "a69de6a6-6dad-451d-92d5-ec647b24563d"
+        "outputId": "c7edde89-5873-4be5-b516-1bcba6809f0f"
       },
       "execution_count": 5,
       "outputs": [
@@ -276,7 +289,7 @@
           "height": 329
         },
         "id": "12KECyhm4B4B",
-        "outputId": "72032252-2fc3-4240-c015-e2b3126cef8f"
+        "outputId": "d8a8d8a1-786c-4411-d412-0a20f23d0299"
       },
       "execution_count": 8,
       "outputs": [
@@ -316,7 +329,7 @@
           "height": 328
         },
         "id": "cj9CKqCW6kI3",
-        "outputId": "927c2d49-b2cf-44de-b398-a6d4c1b7d37b"
+        "outputId": "c31aeb51-c722-4ea1-b60e-292fb2ab455c"
       },
       "execution_count": 10,
       "outputs": [
@@ -361,7 +374,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JMY0-9YY7Rpk",
-        "outputId": "b6c3a661-b271-4d26-e851-a50ae3c5e8a8"
+        "outputId": "bee76cb3-5ac3-4330-f943-163bdcaa5f0d"
       },
       "execution_count": 11,
       "outputs": [
@@ -389,7 +402,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kX1EFQBU7YmD",
-        "outputId": "db20b3a7-04b5-4955-9f09-fceaaa3ed652"
+        "outputId": "66261da7-5a3f-4175-8177-3f0bd230b5f4"
       },
       "execution_count": 12,
       "outputs": [
@@ -432,7 +445,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gqriNhWy8Aoz",
-        "outputId": "65383a8d-e3c5-4c87-d07e-5d77d1a954c9"
+        "outputId": "de864d49-af08-494d-b80d-07a6fa2b17b8"
       },
       "execution_count": 13,
       "outputs": [
@@ -458,7 +471,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vUTp6OyR8Mxw",
-        "outputId": "698cedb2-ffae-4496-dbd4-5138ef904914"
+        "outputId": "fe55e694-ea2a-4e06-e48d-75a615ce2fff"
       },
       "execution_count": 14,
       "outputs": [
@@ -553,7 +566,7 @@
       ],
       "metadata": {
         "id": "fuhfN92n8QEK",
-        "outputId": "67af9726-7e1d-4ff5-f088-d52661c638ed",
+        "outputId": "c4361713-1864-431a-baa7-fbffcd3111f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -579,7 +592,7 @@
       ],
       "metadata": {
         "id": "LFTvZwXOCilw",
-        "outputId": "f50abacf-b848-426e-9225-ad17240c3eb3",
+        "outputId": "dd406b3f-a17a-48dd-babd-402cedb22ea4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -614,7 +627,7 @@
       ],
       "metadata": {
         "id": "x2kT4tjmCm6k",
-        "outputId": "83a7f166-a335-4dd8-d6b2-bf43c44d8d6c",
+        "outputId": "9ca98583-7ba4-4a8f-952d-1f2db451e06b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299
@@ -676,7 +689,7 @@
       ],
       "metadata": {
         "id": "iCIdFL-YLcHh",
-        "outputId": "5798c333-f560-4cac-a6a7-d559ddc3f1d8",
+        "outputId": "efde96ae-3571-4edf-f000-f8ff9f27a6a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -728,7 +741,7 @@
       ],
       "metadata": {
         "id": "V6V-hZzUJR0S",
-        "outputId": "4b53cdd3-d6b2-42a9-985b-aec8534af494",
+        "outputId": "6909b0c0-e93a-471a-f178-6342b01cc39d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -788,7 +801,7 @@
       ],
       "metadata": {
         "id": "z7bk2ZrOM6-Y",
-        "outputId": "36d3b40b-bbf8-40fb-bcc8-f2dee66618ce",
+        "outputId": "ec08fe6b-d42c-4b74-f117-3113af8621ba",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -851,7 +864,7 @@
       ],
       "metadata": {
         "id": "egvC-crYOF4k",
-        "outputId": "9023ae3b-2e8d-41bf-f834-1df782e88ab1",
+        "outputId": "316214e9-fefc-4eb6-e1d1-1ea16ab146e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -879,7 +892,7 @@
       ],
       "metadata": {
         "id": "HGyk1qXSPcoM",
-        "outputId": "d82d607d-e7f6-4dbc-ae10-7b6e0d87a41d",
+        "outputId": "36f593c7-8c42-4860-f43b-1012b98fb1fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -924,7 +937,7 @@
       ],
       "metadata": {
         "id": "CN72TS-cP1fr",
-        "outputId": "7b23366f-6905-46c1-a658-8059c92a21c1",
+        "outputId": "b83de6f6-97f2-4dd7-a042-c4b3bbcdfbd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1105,7 +1118,7 @@
       ],
       "metadata": {
         "id": "wukiAlA0xpvu",
-        "outputId": "43e8d2f8-973d-4647-f3d2-2cbb160ea78a",
+        "outputId": "03094fa2-c105-4d08-97e1-19b325e17615",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1116,7 +1129,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch.utils.data.dataset.Subset at 0x7fed4b5e22e0>"
+              "<torch.utils.data.dataset.Subset at 0x7f2e72048d60>"
             ]
           },
           "metadata": {},
@@ -1131,12 +1144,12 @@
       ],
       "metadata": {
         "id": "NYLzlM25x2HX",
-        "outputId": "9a82444f-29ed-4e00-c3b1-7486436d2383",
+        "outputId": "e18a088f-7cc9-4b0e-a8e2-c8f86e143a67",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1146,7 +1159,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 30
+          "execution_count": 29
         }
       ]
     },
@@ -1168,7 +1181,7 @@
       "metadata": {
         "id": "s227WY0KyH4N"
       },
-      "execution_count": 31,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1194,7 +1207,7 @@
       "metadata": {
         "id": "N1UjTq4qyiOf"
       },
-      "execution_count": 32,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1215,12 +1228,12 @@
       ],
       "metadata": {
         "id": "Nw1igOyhzCfd",
-        "outputId": "7e5267df-1969-4ba6-abfe-e95be9faf26b",
+        "outputId": "175504d8-3c92-4bd1-b65b-8fd91224b493",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1230,7 +1243,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 32
         }
       ]
     },
@@ -1255,9 +1268,100 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "The reason why we may still need two split datasets\n",
+        "is exactly that: data augmentation. \n",
+        "\n",
+        "In general, we want to apply data augmentation\n",
+        "to the training data only.\n",
+        "\n",
+        "Data augmentation is accomplished using composing\n",
+        "transforms, which will be applied to all points in the dataset.\n",
+        "\n",
+        "If we need some data points to be augmented, the easiest way to\n",
+        "accomplish this is to create two composers and use them in two different datasets."
+      ],
       "metadata": {
         "id": "-mmQtulKzM-F"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Uses indices to perform the split\n",
+        "x_train_tensor = x_tensor[train_idx]\n",
+        "y_train_tensor = y_tensor[train_idx]\n",
+        "\n",
+        "x_val_tensor = x_tensor[val_idx]\n",
+        "y_val_tensor = y_tensor[val_idx]"
+      ],
+      "metadata": {
+        "id": "0BU0owZS6Gd6"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Then, here come the two composers: The `train_composer()` augments the data,\n",
+        "and then scales it (min-max); the `val_composer()` only scales the data (min-max)."
+      ],
+      "metadata": {
+        "id": "dF2pDQCg7zuV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_composer = Compose([RandomHorizontalFlip(p=.5), Normalize(mean=(.5,), std=(.5,))])\n",
+        "val_composer = Compose([Normalize(mean=(.5,), std=(.5,))])"
+      ],
+      "metadata": {
+        "id": "e9cNpdtp7fEU"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next, we use them to create two datasets and their corresponding data loaders."
+      ],
+      "metadata": {
+        "id": "BYO9s7Iy8aVH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = TransformedDataset(x_train_tensor, y_train_tensor, transform=train_sampler)\n",
+        "val_dataset = TransformedDataset(x_val_tensor, y_val_tensor, transform=val_composer)\n",
+        "\n",
+        "# Builds a loader of each set\n",
+        "train_loader = DataLoader(dataset=train_dataset, batch_size=16, shuffle=True)\n",
+        "val_loader = DataLoader(dataset=val_dataset, batch_size=16)"
+      ],
+      "metadata": {
+        "id": "QmgEtHM48a8t"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Weighted Data Sampler"
+      ],
+      "metadata": {
+        "id": "zGXNvzVC9fI6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "7g2j8aDF9hXE"
       }
     }
   ]
